--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,36 @@
   }
 }
 
+/* ::-webkit-scrollbar {
+  width: 10px;
+  background: transparent;
+} */
+
+/* ::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  border-radius: 3px;
+} */
+
+/* ::-webkit-scrollbar-thumb {
+  background-color: yellowgreen;
+  width: 12px;
+
+  border-radius: 10px;
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+} */
+
+body {
+  scrollbar-gutter: stable both-edges;
+}
+
+/* body{
+  scrollbar-width: thin;
+  scrollbar-color: #6969dd #e0e0e0;
+} */
+
+
 .App-header {
   background-color: #121419;
   min-height: 100vh;
